# Free-SVN

./: .gitignore  CLAUDE.md  index.html  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
.claude/: settings.json
.superpowers/brainstorm/: .last-token
doc/01-开发规范/: 01-Vue前端开发规范.md  02-Rust后端开发规范.md  03-代码注释规范.md  04-文档生成规范.md
doc/01-项目规范/: 01-Vue前端开发规范.md  02-Rust后端开发规范.md  03-代码注释规范.md  04-文档生成规范.md
doc/02-设计文档/01-业务功能设计/: 01-业务功能设计-v4.md  01-业务功能设计-v5.md
doc/02-设计文档/02-交互与视觉设计/: 02-交互与视觉设计-v5.md  02-交互与视觉设计-v6.md
doc/02-设计文档/03-操作进度提示设计/: 03-操作进度提示设计-v1.md  03-操作进度提示设计-v2.md  03-操作进度提示设计-v3.md  03-操作进度提示设计-v4.md
doc/02-评估报告/03-设计文档评估报告/: 03-设计文档评估报告-v1.md
doc/02-评估报告/04-交互与视觉设计评估报告/: 04-交互与视觉设计评估报告-v1.md  04-交互与视觉设计评估报告-v2.md
doc/03-设计文档/01-业务功能设计/: 01-业务功能设计-v2.md
doc/03-设计文档/02-交互与视觉设计/: 02-交互与视觉设计-v2.md  02-交互与视觉设计-v4.md
doc/99-评估报告/03-设计文档评估报告/: 03-设计文档评估报告-v6.md
doc/99-评估报告/05-执行计划评估报告/: 05-执行计划评估报告-v1.md  05-执行计划评估报告-v2.md
doc/design/: 01-业务功能设计.md  02-交互与视觉设计.md
doc/report/: 01-架构与规范评估报告.md  02-开发规范覆盖度评估报告.md  02-设计文档评估报告.md  03-设计文档二次评估报告.md
doc/rule/: 01-Vue前端开发规范.md  01-会话结束自动提交流程.md  02-Rust后端开发规范.md  03-设计文档模板.md
public/fonts/: README.md
resources/svn/: README.md
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json  progress.json
src-tauri/src/: lib.rs  main.rs  tray.rs
src-tauri/src/commands/: auth.rs  auth.rs.bak  auth_account.rs  auto_start.rs  branch_ops.rs  branch_ops.rs.bak  branches.rs  cancel.rs  cancel.rs.bak  checkout.rs  cleanup.rs  cleanup.rs.bak  commit.rs  diff.rs  file_ops.rs  ignore.rs  lock.rs  log.rs  logs.rs  logs.rs.bak  mod.rs  mod.rs.bak  network.rs  network.rs.bak  progress.rs  relocate.rs  relocate.rs.bak  settings.rs  status.rs  tray.rs  tray.rs.bak  update.rs  update.rs.bak
src-tauri/src/config/: mod.rs  store.rs
src-tauri/src/logging/: logger.rs  mod.rs
src-tauri/src/models/: error.rs  file.rs  mod.rs  repo.rs
src-tauri/src/services/: mod.rs
src-tauri/src/shell_integration/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/svn/: executor.rs  mod.rs  parser.rs  parser_extra.rs  progress.rs  queue.rs  types.rs
src-tauri/src/tools/: differ.rs  merger.rs  mod.rs  resolver.rs
src-tauri/svn-resources/: README.md
src-tauri/svn-resources/linux/lib/: libapr-1.so.0  libapr-1.so.0.7.5  libaprutil-1.so.0  libaprutil-1.so.0.6.3  libintl.so.8  liblz4.so.1  liblz4.so.1.10.0  libsasl2.so.3  libsasl2.so.3.0.0  libserf-1.so.1.3.0  libserf-1.so.1.3.10  libssl.so.3  libsvn_client-1.so.0.0.0  libsvn_client-1.so.0.14.5  libsvn_delta-1.so.0  libsvn_delta-1.so.0.0.0  libsvn_diff-1.so.0  libsvn_diff-1.so.0.0.0  libsvn_fs-1.so.0  libsvn_fs-1.so.0.14.5  libsvn_fs_fs-1.so.0.14.5  libsvn_fs_util-1.so.0  libsvn_fs_util-1.so.0.14.5  libsvn_ra-1.so.0.0.0  libsvn_ra_local-1.so.0  libsvn_ra_local-1.so.0.0.0  libsvn_ra_local-1.so.0.14.5  libsvn_ra_serf-1.so.0  libsvn_ra_serf-1.so.0.0.0  libsvn_ra_svn-1.so.0  libsvn_ra_svn-1.so.0.0.0  libsvn_repos-1.so.0  libsvn_repos-1.so.0.14.5  libsvn_subr-1.so.0  libsvn_wc-1.so.0  libsvn_wc-1.so.0.0.0  libuuid.so.1.3.0
src-tauri/svn-resources/macos/lib/: libaprutil-1.0.dylib  libssl.3.dylib  libsvn_delta-1.0.dylib  libsvn_diff-1.0.dylib  libsvn_fs-1.0.dylib  libsvn_fs_fs-1.0.dylib  libsvn_fs_x-1.0.dylib  libsvn_ra_serf-1.0.dylib  libsvn_subr-1.0.dylib  libsvn_wc-1.0.dylib
src/composables/: useAutoRefresh.ts  useFileSelection.ts  useKeyboardShortcuts.ts  useNetworkStatus.ts  useOperationGuard.ts  useProgressOverlay.ts
src/layouts/: MainLayout.vue
src/locales/: README.md  en.json  ja.json  ko.json  zh-CN.json
src/pages/: CommitPage.vue  DiffPage.vue  HomePage.vue  LogPage.vue  ProgressWindowPage.vue  SettingsPage.vue  WelcomePage.vue
src/router/: index.ts
src/services/: svn.ts  svn.ts.bak
src/stores/: fileList.ts  settings.ts  svn.ts  svnEvents.ts  workspace.ts
src/types/: error-codes.ts  settings.ts  svn.ts  workspace.ts
src/utils/: format.ts
(+243 files in other folders)
