[package]
name = "free-svn"
version = "0.1.0"
description = "Free-SVN - 跨平台 SVN 图形化工具"
authors = ["lowcode-server"]
license = "MIT"
repository = "https://github.com/lowcode-server/Free-SVN"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "free_svn_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0.132"
serde = { version = "1.0.213", features = ["derive"] }
log = "0.4.22"
thiserror = "2.0.3"
tauri = { version = "2.11.3", features = ["tray-icon"] }
tauri-plugin-log = "2.2.0"
tauri-plugin-store = "2.4.3"
tauri-plugin-single-instance = "2.2.0"
tauri-plugin-window-state = "2.2.0"
tauri-plugin-dialog = "2.2.0"
tauri-plugin-shell = "2.2.0"
tauri-plugin-clipboard-manager = "2.2.0"
tauri-plugin-notification = "2"
tokio = { version = "1.41.0", features = ["full"] }
quick-xml = { version = "0.36.2", features = ["serialize"] }
zip = "2.2.0"
once_cell = "1.20.2"
dirs = "5.0.1"
which = "6.0.3"

[dev-dependencies]
tempfile = "3.14.0"
