[package]
name = "free-svn"
version = "0.1.0"
description = "Free-SVN - 跨平台 SVN 图形化工具"
authors = ["lowcode-server"]
license = "MIT"
repository = "https://github.com/lowcode-server/Free-SVN"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "free_svn_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0.132"
serde = { version = "1.0.213", features = ["derive"] }
log = "0.4.22"
thiserror = "2.0.3"
tauri = { version = "2.11.3", features = ["tray-icon"] }
tauri-plugin-log = "2.2.0"
tauri-plugin-store = "2.4.3"
tauri-plugin-single-instance = "2.2.0"
tauri-plugin-window-state = "2.2.0"
tauri-plugin-dialog = "2.2.0"
tauri-plugin-shell = "2.2.0"
tauri-plugin-clipboard-manager = "2.2.0"
tauri-plugin-notification = "2"
tokio = { version = "1.41.0", features = ["full"] }
quick-xml = { version = "0.36.2", features = ["serialize"] }
zip = "2.2.0"
once_cell = "1.20.2"
dirs = "5.0.1"
which = "6.0.3"
walkdir = "2.5.0"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"

[lints.rust]
# 跨平台条件编译产生的不可避免的死代码警告
dead_code = "allow"
unused_imports = "allow"
# objc crate 宏展开产生的非预期 cfg 条件
unexpected_cfgs = "allow"

[dev-dependencies]
tempfile = "3.14.0"

[lints.clippy]
# 与后端开发规范一致的配置
similar_names = "allow"
cast_lossless = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
enum_variant_names = "allow"
too_many_arguments = "allow"
type_complexity = "allow"
module_inception = "allow"
large_enum_variant = "allow"
let_unit_value = "allow"
redundant_closure = "allow"
ptr_arg = "allow"
unused_async = "allow"
